--- a/.github/workflows/manage-pr-reviewers.yml
+++ b/.github/workflows/manage-pr-reviewers.yml
@@ -19,7 +19,7 @@ jobs:
               echo "PR_Branch_Name=${{ github.head_ref }}" >> $GITHUB_ENV  
               echo 'Event name:' ${{ github.event_name }}
       
-      - name: Extract Jira Issue Id
+      - name: Extract Jira Issue Key
         run:  |
                 echo PR Numer is: $GITHUB_PR_NUMBER
                 
@@ -42,7 +42,7 @@ jobs:
                   exit 1
                 fi
       
-      - name: Check issue Status if 'Code Review'
+      - name: Check if Jira issue Status is 'Code Review'
         run: |
               restApiGETJiraIssueDetails=$(curl --request GET \
                   --url 'https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/' \
@@ -52,7 +52,7 @@ jobs:
               jira_Issue_Status=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.status.name')
               
               if [[ ${jira_Issue_Status} != "Code Review" ]]; then
-                echo 'The Jira Issue status is ' $jira_Issue_Status ', not Code Review. Cannot proceed.'
+                echo 'The Jira Issue status is' $jira_Issue_Status ', not Code Review. Cannot proceed.'
                 exit 1
               fi                         
       
@@ -61,20 +61,21 @@ jobs:
                 
                 restApiGETGitHubReviewersDetails=$(curl \
                             -H "Accept: application/vnd.github.v3+json" \
-                            https://api.github.com/repos/naregkar/devAutoMerge/pulls/$GITHUB_PR_NUMBER/reviews);
+                            https://api.github.com/repos/naregkar/$GITHUB_REPOSITORY_NAME/pulls/$GITHUB_PR_NUMBER/reviews);
                   
                 approverCount=$(echo $restApiGETGitHubReviewersDetails | jq 'group_by(.user.login) | map(select(max_by(.submitted_at) .state == "APPROVED")) | length')
                 
-                echo 'approved count is: ' $approverCount
+                echo 'Number of approved reviewers:' $approverCount
                 
                 if [[ "$approverCount" -lt 1 ]]; then
-                    echo 'More reviewers are needed in order to this Jira item to progress within its workflow.'
+                    echo 'More reviewers are needed in order for this Jira item to progress within its workflow.'
                     exit 1
                 else
-                    echo 'change status'
+                    echo 'Minimum number of code reviewers passed. Change assignee and status.'
                     
+                    #assign Jira Issue to a certain person/unassign depends on the team
                     curl --request PUT \
-                      --url 'https://naregkar.atlassian.net/rest/api/3/issue/DT-47/assignee' \
+                      --url 'https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/assignee' \
                       --user 'nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87' \
                       --header 'Accept: application/json' \
                       --header 'Content-Type: application/json' \
@@ -82,4 +83,9 @@ jobs:
                       "accountId": "5fea9ba3dd5eb5010881866b"
                     }'
                     
+                    #Change Jira issue Status to QA Open
+                    curl -D- -u nareg.karamanoukian@picsart.com:oBJTrxuI3qf0Do1MBpGbBE87 \
+                      -X POST --data '{"transition":{"id":"61"}}' \
+                      -H "Content-Type: application/json" https://naregkar.atlassian.net/rest/api/3/issue/${{ env.JiraId }}/transitions
+         
                 fi
