--- a/.github/workflows/check-destination-branch.yml
+++ b/.github/workflows/check-destination-branch.yml
@@ -54,11 +54,15 @@ jobs:
                   
               jira_Issue_Labels=$(echo $restApiGETJiraIssueDetails | jq -r '.fields.labels')
               
-              labelShowstopper="Showstopper"
-              if [[ ${jira_Issue_Labels[$labelShowstopper]} ]]; then 
-                echo "Destination should be the release branch.";
-                
-                
-              fi
+              contains() {
+                [[ $1 =~ (^|[[:space:]])$2($|[[:space:]]) ]] && exit(0) || exit(1)
+              }
               
+              labelShowstopper="Showstopper"
+              #if [[ ${jira_Issue_Labels[$labelShowstopper]} ]]; then 
+              #  echo "Destination should be the release branch.";                
+              #fi
+              
+              contains jira_Issue_Labels labelShowstopper
+              echo $? # 0： match, 1: failed
               
